force-app/main/default/objects/Royalty_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASTM_Product_Setup_Required__c</fullName>
        <label>ASTM Product Setup Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <label>Account City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <label>Account Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Postal_Code__c</fullName>
        <label>Account Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Street__c</fullName>
        <label>Account Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Royalty Requests</relationshipLabel>
        <relationshipName>Royalty_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>ASTM Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community_Account__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counter_Subscription__c</fullName>
        <inlineHelpText>Description for user</inlineHelpText>
        <label>Counter Subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRM_On_or_Off__c</fullName>
        <label>DRM On or Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Mechanism__c</fullName>
        <label>Delivery Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASTM Compass</fullName>
                </value>
                <value>
                    <fullName>Own Platform</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Users__c</fullName>
        <label>Estimated Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Revenue__c</fullName>
        <label>Existing Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forced_Login__c</fullName>
        <label>Forced Login</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Address_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Username/Password</fullName>
                </value>
                <value>
                    <fullName>Applet</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Addresses__c</fullName>
        <label>IP Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Tag__c</fullName>
        <label>Industry Tag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc_Comments__c</fullName>
        <label>Reseller Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Standards__c</fullName>
        <label>Number of Standards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loss</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Request</label>
        <referenceTo>Royalty_Request__c</referenceTo>
        <relationshipLabel>Royalty Requests</relationshipLabel>
        <relationshipName>Royalty_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Used in Trigger when set will get auto updated by scheduled class when royalty payments generated.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                    <default>true</default>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Mix__c</fullName>
        <label>Product Mix</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Collections</fullName>
                </value>
                <value>
                    <fullName>Add&apos;l Site Added to Existing Account</fullName>
                </value>
                <value>
                    <fullName>All DL Journals</fullName>
                </value>
                <value>
                    <fullName>DL Complete</fullName>
                </value>
                <value>
                    <fullName>BOS Compass Custom</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 1</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 2</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 3</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 4</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 5</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 6</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 7</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 8</fullName>
                </value>
                <value>
                    <fullName>BOS Section 1 Volume 9</fullName>
                </value>
                <value>
                    <fullName>BOS Section 10 Volume 1</fullName>
                </value>
                <value>
                    <fullName>BOS Section 10 Volume 2</fullName>
                </value>
                <value>
                    <fullName>BOS Section 10 Volume 3</fullName>
                </value>
                <value>
                    <fullName>BOS Section 10 Volume 4</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 1</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 2</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 3</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 4</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 5</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 6</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 7</fullName>
                </value>
                <value>
                    <fullName>BOS Section 11 Volume 8</fullName>
                </value>
                <value>
                    <fullName>BOS Section 12 Volume 1</fullName>
                </value>
                <value>
                    <fullName>BOS Section 12 Volume 2</fullName>
                </value>
                <value>
                    <fullName>BOS Section 13 Volume 1</fullName>
                </value>
                <value>
                    <fullName>BOS Section 13 Volume 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Due_Date__c</fullName>
        <label>Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Royalty_Amount__c</fullName>
        <label>Royalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Expiration_Date__c</fullName>
        <label>Royalty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Royalty_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Royalty Payment</label>
        <referenceTo>Royalty_Payment__c</referenceTo>
        <relationshipLabel>Royalty Requests</relationshipLabel>
        <relationshipName>Royalty_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Usage_Reports_Hidden__c</fullName>
        <label>Usage Reports Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watermark__c</fullName>
        <label>Watermark</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Royalty Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community_Account__c</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Royalty_Amount__c</columns>
        <columns>Comments__c</columns>
        <columns>Account_Country__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account_Owner_Email__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Detailed View</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Royalty_Payment__c</columns>
        <columns>Royalty_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Approval_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Approved Requests</label>
    </listViews>
    <listViews>
        <fullName>Requests_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Royalty_Amount__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Payment_Frequency__c</columns>
        <columns>Royalty_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Royalty Requests</label>
    </listViews>
    <nameField>
        <displayFormat>Req-{0000}</displayFormat>
        <label>Royalty Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>