force-app/main/default/objects/Royalty_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Community_Account__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Royalty_Amount__c</columns>
    <columns>Comments__c</columns>
    <columns>Account_Country__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Account_Owner_Email__c</columns>
    <columns>Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Detailed View</label>
</ListView>