force-app/main/default/objects/Royalty_Request__c/listViews/Approved_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Royalty_Payment__c</columns>
    <columns>Royalty_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Approval_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Approved Requests</label>
</ListView>