force-app/main/default/objects/Royalty_Request__c/listViews/Requests_This_Month.listView-meta.xml
<ListView>
    <fullName>Requests_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Royalty_Amount__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Frequency__c</columns>
    <columns>Royalty_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Royalty Requests</label>
</ListView>